welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:6: error: Non-zero integral values may not have a leading zero.
00
^Diagonal:7: error: Non-zero integral values may not have a leading zero.
01 10
^Diagonal:8: error: Non-zero integral values may not have a leading zero.
02 11 20
^Diagonal:9: error: Non-zero integral values may not have a leading zero.
03 12 21 30
^Diagonal:10: error: Non-zero integral values may not have a leading zero.
04 13 22 31 40
^Diagonal:2: error: ';' expected but ',' found.
  setpos{4,1}
          ^Diagonal:6: error: illegal start of definition
00
^Diagonal:8: error: illegal start of definition
02 11 20
^Diagonal:9: error: illegal start of definition
03 12 21 30
^Diagonal:10: error: illegal start of definition
04 13 22 31 40
^